--- a/solunity/index.html
+++ b/solunity/index.html
@@ -1123,16 +1123,16 @@ function callCTA2(){
     this.galaxystoreTween.start();*/
     this.suitsCTATween.start()
    var isLandscape = this.game.height / this.game.width  < 1.3 ? true: false;
+   
+   if(this.scale.isPortrait){
+	    this.popup(this.hex, this.game.width, this.game.height,0,0.8)
+	    this.popup(this.suits, this.game.width, this.game.height,0,0.3)
+	    this.popup(this.titleCTA, this.game.width, this.game.height,0,0.55)
+	    this.popup(this.galaxystore, this.game.width, this.game.height,0,0.32)
+	    this.popup(this.appstore, this.game.width, this.game.height,0,0.27)
 
-    if(!isLandscape){
-	   this.popup(this.hex, this.game.width, this.game.height,0,0.6)
-	    this.popup(this.suits, this.game.width, this.game.height,0,0.2)
-	    this.popup(this.titleCTA, this.game.width, this.game.height,0,0.35)
-	    this.popup(this.galaxystore, this.game.width, this.game.height,0,0.29)
-	    this.popup(this.appstore, this.game.width, this.game.height,0,0.28)
-
-	    this.scaleSprite(this.playBg, this.game.width, this.game.height,0,0.5)
-	  	this.pulse(this.playBg, this.game.width, this.game.height,0,0.55)
+	    this.scaleSprite(this.playBg, this.game.width, this.game.height,0,0.6)
+	    this.pulse(this.playBg, this.game.width, this.game.height,0,0.65)
 	}
 	else{
 		this.popup(this.hex, this.game.width, this.game.height,0,0.6)
