--- a/cubecubeV8/index.html
+++ b/cubecubeV8/index.html
@@ -290,19 +290,6 @@ function resize(width, height) {
     	    this.scaleSprite(this.piece2, width, height, 0, 0.14);
     	    this.scaleSprite(this.piece3, width, height, 0, 0.14);
 
-    	    this.tileGrid = [
-				[0, 0, 0, 0, 10, 9, 9, 0, 0, 0],
-				[0, 0, 0, 0, 10, 10, 9, 0, 0, 0],
-				[0, 0, 0, 0, 10, 11, 11, 0, 0, 0],
-				[0, 0, 0, 0, 11, 11, 12, 0, 0, 0],
-				[1, 1, 7, 8, 14, 14, 14, 6, 6, 6],
-				[1, 7, 7, 16, 15, 15, 14, 5, 6, 4],
-				[1, 7, 16, 16, 16, 15, 14, 5, 5, 5], 
-				[0, 0, 0, 0, 13, 13, 13, 0, 0, 0],
-				[0, 0, 0, 0, 3, 2, 2, 0, 0, 0],
-				[0, 0, 0, 0, 3, 2, 2, 0, 0, 0] 
-			 ];
-
 	    	this.grid.removeAll()
 	    	this.initGrid()
     	}
@@ -454,19 +441,6 @@ function resize(width, height) {
     		this.piece1.x = this.game.width*0.8;
 	    	this.piece2.x = this.game.width*0.8;
 	    	this.piece3.x = this.game.width*0.8;
-
-	    	    this.tileGrid = [
-		[0, 0, 0, 0, 10, 9, 9, 0, 0, 0],
-		[0, 0, 0, 0, 10, 10, 9, 0, 0, 0],
-		[0, 0, 0, 0, 10, 11, 11, 0, 0, 0],
-		[0, 0, 0, 0, 11, 11, 12, 0, 0, 0],
-		[1, 1, 7, 8, 14, 14, 14, 6, 6, 6],
-		[1, 7, 7, 16, 15, 15, 14, 5, 6, 4],
-		[1, 7, 16, 16, 16, 15, 14, 5, 5, 5], 
-		[0, 0, 0, 0, 13, 13, 13, 0, 0, 0],
-		[0, 0, 0, 0, 3, 2, 2, 0, 0, 0],
-		[0, 0, 0, 0, 3, 2, 2, 0, 0, 0] 
-	 ];
 
 	    	this.grid.removeAll()
 	    	this.initGrid()
@@ -1355,10 +1329,15 @@ function initGrid(){
 					tile.y =(i*(tile.height+3))+(this.game.height*0.205);
 				}
 
+				if(this.numberPiece == 2 && this.tileGrid[i][j] == 16)
+					tile.visible = true;
+				if(this.numberPiece == 3 && (this.tileGrid[i][j] == 16|| this.tileGrid[i][j] == 15))
+					tile.visible = true;
+
 				tile.scaleY = tile.scale.y;
 				tile.scaleX = tile.scale.x;
 				
-				this.tileGrid[i][j]= tile;
+				//this.tileGrid[i][j]= tile;
 		        this.grid.add(tile);
 		    }
 	    } 
