--- a/blocksUnity/index.html
+++ b/blocksUnity/index.html
@@ -722,7 +722,7 @@ var Well = function(
   var cells = new Array(rows);
   
   var isLandscape = game.height / game.width  < 1.3 ? true: false;
-  var size = quadSize + 8;
+  var size = quadSize - 8;
   if(game.width <= 320 && game.height <= 480)
   	var size = quadSize - 20;
   if(isLandscape){
@@ -748,9 +748,9 @@ var Well = function(
       q.x = x;
       q.y = y;
 
-      scaleSprite(q, game.width, game.height/3, 0 ,0.25)
+      scaleSprite(q, game.width, game.height/3, 0 ,0.2)
       if(game.width <= 320 && game.height <= 480)
-      	scaleSprite(q, game.width, game.height/3, 0 ,0.12)
+      	scaleSprite(q, game.width, game.height/3, 0 ,0.2)
   	  if(isLandscape)
         scaleSprite(q, game.width, game.height/3, 0 ,0.3)
 
