--- a/wordcross/index.html
+++ b/wordcross/index.html
@@ -372,14 +372,11 @@ function setBase(){
     this.circle.addChild(this.letterTwo)
     this.circle.addChild(this.letterThree)
 
-    this.circle.children[1].events.onInputDown.add(onClickLetter, this);
-    this.circle.children[1].events.onInputOver.add(onClickLetter, this);
+    ///this.circle.children[1].events.onInputOver.add(onClickLetter, this);
     this.circle.children[1].inputEnabled = false;
-    this.circle.children[2].events.onInputDown.add(onClickLetter, this);
-    this.circle.children[2].events.onInputOver.add(onClickLetter, this);
+    //this.circle.children[2].events.onInputOver.add(onClickLetter, this);
     this.circle.children[2].inputEnabled = false;
-    this.circle.children[3].events.onInputDown.add(onClickLetter, this);
-    this.circle.children[3].events.onInputOver.add(onClickLetter, this);
+    //this.circle.children[3].events.onInputOver.add(onClickLetter, this);
     this.circle.children[3].inputEnabled = false;
 
     this.tutorialLine = game.add.sprite(-this.game.width,0,'atlas','line.png');
@@ -592,9 +589,7 @@ function addTutorialWord(){
 
 function onClickLetter(letter){
     if(letter.active) return
-    letter.active = true
     var isLandscape = this.game.height / this.game.width  < 1.3 ? true: false;
-
     this.clickSFX.play()
 
     if(letter.type == 'O'){
@@ -615,7 +610,8 @@ function onClickLetter(letter){
 
         this.lettersArray.push('O')
         this.circle.children[1].alpha =1
-        this.circle.children[4].active = true
+        this.circle.children[1].active = true
+
         this.circle.children[4].setStyle({fill:'#5F002A',stroke:'#5F002A',fontSize:52})
 
         if(!this.startDrawing){
@@ -642,7 +638,8 @@ function onClickLetter(letter){
 
         this.lettersArray.push('W')
         this.circle.children[2].alpha =1
-        this.circle.children[5].active = true
+        this.circle.children[2].active = true
+
         this.circle.children[5].setStyle({fill:'#5F002A',stroke:'#5F002A',fontSize:52})
 
          if(!this.startDrawing){
@@ -669,7 +666,8 @@ function onClickLetter(letter){
 
         this.lettersArray.push('N')
         this.circle.children[3].alpha =1
-        this.circle.children[6].active = true
+        this.circle.children[3].active = true
+
         this.circle.children[6].setStyle({fill:'#5F002A',stroke:'#5F002A',fontSize:52})
 
          if(!this.startDrawing){
@@ -680,6 +678,8 @@ function onClickLetter(letter){
     }
 
     this.fillLetters.align(-1, 1, 30, 30,Phaser.CENTER);
+
+
 
     if(this.lettersArray.length >= 3)
         this.checkWord()
@@ -740,12 +740,12 @@ function checkWord(){
 
 function resetLetters(){
     if(this.isCTA) return
+    this.lettersArray = []
     this.startDrawing = false
     this.circle.children[0].endFill();
     this.circle.children[0].clear()
     this.circle.children[0].lineStyle(40, 0xffffff,1);
     this.fillLetters.removeAll()
-    this.lettersArray = []
     this.circle.children[1].alpha = 0
     this.circle.children[2].alpha = 0
     this.circle.children[3].alpha = 0
@@ -755,6 +755,19 @@ function resetLetters(){
     this.circle.children[4].setStyle({fill:'#ffffff',stroke:'#ffffff',fontSize:62})
     this.circle.children[5].setStyle({fill:'#ffffff',stroke:'#ffffff',fontSize:62})
     this.circle.children[6].setStyle({fill:'#ffffff',stroke:'#ffffff',fontSize:62})
+}
+
+function update() {  
+    if(this.phase != 2) return
+    if(this.game.input.activePointer.isDown && this.circle.children[1].input.checkPointerOver(this.game.input.activePointer)) { 
+        this.onClickLetter(this.circle.children[1])
+    }
+    else if(this.game.input.activePointer.isDown && this.circle.children[2].input.checkPointerOver(this.game.input.activePointer)){
+        this.onClickLetter(this.circle.children[2])
+    }
+    else if(this.game.input.activePointer.isDown && this.circle.children[3].input.checkPointerOver(this.game.input.activePointer)){
+        this.onClickLetter(this.circle.children[3])
+    }
 }
 		</script>
 	</body>
