--- a/wc4/index.html
+++ b/wc4/index.html
@@ -191,7 +191,7 @@ function resize(width, height) {
           this.tutorialLine.y = this.circle.y
 
           this.board.forEach(function(tile){
-                this.scaleSprite(tile, width, height/3, 0 ,0.24)
+                this.scaleSprite(tile, width, height, 0 ,0.48)
           })
           this.board.x = width*0.5
           this.board.y = height*0.38
@@ -253,7 +253,7 @@ function resize(width, height) {
           this.tutorialLine.y = this.circle.y
 
           this.board.forEach(function(tile){
-                this.scaleSprite(tile, width/3, height, 0 ,0.2)
+                this.scaleSprite(tile, width/3, height, 0 ,0.6)
           })
           this.board.x = width*0.7
           this.board.y = height*0.6
