--- a/wc4/index.html
+++ b/wc4/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="robots" content="noindex" /> 
-		<meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no' />
+<meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=1.0, minimum-scale=0.5, user-scalable=no, minimal-ui">
 		<meta content="yes" name="apple-mobile-web-app-capable"></meta>
 		<meta content="black" name="apple-mobile-web-app-status-bar-style"></meta>
 		<title>word cross</title>
