--- a/wc5/index.html
+++ b/wc5/index.html
@@ -30,7 +30,8 @@
 </script>
 
 		<script type="text/javascript">
-
+ let clientWidth = document.documentElement.clientWidth
+ let clientHeight = document.documentElement.clientHeight
 	 const PIXEL_RATIO = (function() {
     var ctx = document.createElement("canvas").getContext("2d"),
         dpr = window.devicePixelRatio || 1,
