--- a/wc6/index.html
+++ b/wc6/index.html
@@ -49,6 +49,7 @@
 	width: window.innerWidth,
 	height: window.innerHeight, 
 	renderer: Phaser.CANVAS,
+	resolution:PIXEL_RATIO,
 	state: this
 });
 
